# coin-selection-taler

coin-selection-c-master/: .gitignore  CMakeLists.txt  Doxyfile  README.md  run.sh
coin-selection-c-master/data/: global-2024.fee  key-2024.signed  keys.json  taler.conf  wire-fee-2024.sign
coin-selection-c-master/docs/doxygen/html/: annotated.html  classes.html  coin__selection_8c.html  coin__selection_8h.html  coin__selection_8h_source.html  common_8h.html  common_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  fee_8c.html  fee_8h.html  fee_8h_source.html  files.html  functions.html  functions_vars.html  generator_8c.html  generator_8h.html  generator_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  main_8c.html  menudata.js  parser_8c.html  parser_8h.html  parser_8h_source.html  simulation_8c.html  simulation_8h.html  simulation_8h_source.html  struct_action-members.html  struct_action.html  struct_coin-members.html  struct_coin.html  struct_denomination-members.html  struct_denomination.html  (+23 more)
coin-selection-c-master/docs/doxygen/xml/: Doxyfile.xml  coin__selection_8c.xml  coin__selection_8h.xml  common_8h.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  fee_8c.xml  fee_8h.xml  generator_8c.xml  generator_8h.xml  index.xml  main_8c.xml  parser_8c.xml  parser_8h.xml  simulation_8c.xml  simulation_8h.xml  struct_action.xml  struct_coin.xml  struct_denomination.xml  struct_duration.xml  struct_durations.xml  struct_fee.xml  struct_fees.xml  struct_global_fees.xml  struct_rules.xml  struct_thread_args.xml  struct_user.xml  (+4 more)
coin-selection-c-master/include/: coin_selection.h  common.h  fee.h  generator.h  parser.h  simulation.h  user.h
coin-selection-c-master/python/: main.py  pulp_model.py
coin-selection-c-master/src/: coin_selection.c  coin_selection.cpp  fee.cpp  generator.c  generator.cpp  main.c  main.cpp  parser.c  parser.cpp  simulation.c  simulation.cpp  user.c  user.cpp
(+71 files in other folders)
